Name:                bugpan
Version:             0.1
Description:         Bugpan
License:             BSD3
License-file:        LICENSE
Cabal-Version:       >= 1.2
Author:              Tom Nielsen
Maintainer:          tanielsen@gmail.com
build-type:          Custom
--Extra-Include-Dirs:  /usr/include, /usr/local/include, .

Library
   Exposed-modules:  Query, QueryTypes, QueryUtils, Numbers, PlotGnuplot, EvalM, Database, HaskShapes, RandomSources, QueryPlots, Expr, ValueIO, HaskSyntaxUntyped, NewSignal
   if os(linux)
     ghc-options:        -O2 -threaded -lcomedi
   else
     if os(mingw32)
       ghc-options:        -O2 -threaded -DNODAQ -DMINGW32
     else
       ghc-options:        -O2 -threaded -DNODAQ
   other-modules:    Parse, Types,Eval, Traverse, Transform, PrettyPrint, BNFC.LexBugpan, BNFC.ParBugpan, BNFC.SkelBugpan,BNFC.PrintBugpan,BNFC.LayoutBugpan ,BNFC.ErrM,UnitTesting, BNFC.AbsBugpan,BuiltIn, TypeCheck, CompiledSrcsSinks
   Build-depends:    tnutils, probably, process, directory, regex-posix, random, base, bytestring, binary, old-time, storablevector, mtl, data-binary-ieee754, uuid, mersenne-random, storable-tuple


Executable bugsess   
   Main-Is:          BugSess.hs
   if os(linux)
     ghc-options:        -O2 -threaded -lcomedi
   else
     if os(mingw32)
       ghc-options:        -O2 -threaded -DNODAQ -DMINGW32
     else
       ghc-options:        -O2 -threaded -DNODAQ
   other-modules:    EvalM, Parse, Types,Database,Eval,Expr, Traverse, Transform, HaskSyntaxUntyped, ValueIO, PrettyPrint, BNFC.LexBugpan, BNFC.ParBugpan, BNFC.SkelBugpan,BNFC.PrintBugpan,BNFC.LayoutBugpan ,BNFC.ErrM,UnitTesting, BNFC.AbsBugpan,BuiltIn, TypeCheck
   Build-depends:    array, tnutils, probably, haskell98, process, directory, regex-posix, random, base, bytestring, binary, old-time, storablevector, mtl, data-binary-ieee754, uuid, hint, SHA, mersenne-random, storable-tuple

Executable buganal   
   Main-Is:          BugAnal.hs
   if os(linux)
     ghc-options:        -O2 -threaded -lcomedi
   else
     if os(mingw32)
       ghc-options:        -O2 -threaded -DNODAQ -DMINGW32
     else
       ghc-options:        -O2 -threaded -DNODAQ
   other-modules:    EvalM, Parse, Types,Database,Eval,Expr, Traverse, Transform, HaskSyntaxUntyped, ValueIO, PrettyPrint, BNFC.LexBugpan, BNFC.ParBugpan, BNFC.SkelBugpan,BNFC.PrintBugpan,BNFC.LayoutBugpan ,BNFC.ErrM,UnitTesting, BNFC.AbsBugpan,BuiltIn, TypeCheck
   Build-depends:    array, tnutils, probably, haskell98, process, directory, regex-posix, random, base, bytestring, binary, old-time, storablevector, mtl, data-binary-ieee754, uuid, hint, SHA, mersenne-random, storable-tuple

Executable bugdriver   
   Main-Is:            Driver.hs
   if os(linux)
     ghc-options:        -O2 -threaded -lcomedi
   else
     if os(mingw32)
       ghc-options:        -O2 -threaded -DNODAQ -DMINGW32
     else
       ghc-options:        -O2 -threaded -DNODAQ
--   extra-libraries:    comedi
--   extra-include-dirs
--   extra-lib-dirs:     /usr/lib
   Build-depends:      array, tnutils, probably, haskell98, process, directory, regex-posix, 
                       utility-ht, random, base, bytestring, binary, old-time, storablevector, 
                       mtl, data-binary-ieee754, uuid, GLFW>0.3, unix, stm, OpenGL<2.4, storable-tuple
   if os(linux)
     c-sources:          Comedi/comedi_hs_helper.c
--   ghc-options:      -O2 -threaded -lcomedi Comedi/comedi_hs_helper.o
--   Includes:           comedilib.h, comedi.h
--  Install-Includes:   comedilib.h, comedi.h




Executable runbugpan   
   Main-Is:          RunBugpan.hs
   if os(linux)
     ghc-options:        -O2 -threaded -lcomedi
   else
     if os(mingw32)
       ghc-options:        -O2 -threaded -DNODAQ -DMINGW32
     else
       ghc-options:        -O2 -threaded -DNODAQ
--   ghc-options:      -O2 -threaded -lcomedi Comedi/comedi_hs_helper.o

   Build-depends:    array, tnutils, probably, haskell98, process, directory, regex-posix, 
                     utility-ht, random, base, bytestring, binary, old-time, storablevector, 
                     mtl, data-binary-ieee754, uuid, GLFW>0.3, unix, stm, OpenGL<2.4, 
                     storable-tuple
   if os(linux)
     c-sources:          Comedi/comedi_hs_helper.c
--
--   extra-libraries:  libcomedi