Name:                bugpan
Version:             0.1
Description:         Bugpan
License:             BSD3
License-file:        LICENSE
Cabal-Version:       >= 1.2
Author:              Tom Nielsen
Maintainer:          tanielsen@gmail.com
build-type:          Custom
--Extra-Include-Dirs:  /usr/include, /usr/local/include, .

Flag NoGl
  Description: Disable OpenGL and GLFW
  Default:     False

Flag NoDaq
  Description: Disable Comedi DAQ
  Default:     False

Library
   Exposed-modules:  Query, QueryTypes, QueryUtils, Numbers, PlotGnuplot, EvalM, Database, HaskShapes, RandomSources, QueryPlots, Expr, ValueIO, HaskSyntaxUntyped, NewSignal, FitGnuplot
   ghc-options:        -O2
   if flag(nodaq)
     ghc-options:        -DNODAQ
   other-modules:    Parse, Types,Eval, Traverse, Transform, PrettyPrint, BNFC.LexBugpan, BNFC.ParBugpan, BNFC.SkelBugpan,BNFC.PrintBugpan,BNFC.LayoutBugpan ,BNFC.ErrM,UnitTesting, BNFC.AbsBugpan,BuiltIn, TypeCheck, CompiledSrcsSinks
   Build-depends:    tnutils, probably, process, directory, regex-posix, random, base, bytestring, binary, old-time, storablevector, mtl, data-binary-ieee754, uuid, mersenne-random, storable-tuple, hmatrix


Executable bugsess   
   Main-Is:          BugSess.hs
   ghc-options:      -O2 -threaded
   if flag(nodaq)
     ghc-options:    -DNODAQ
   other-modules:    EvalM, Parse, Types,Database,Eval,Expr, Traverse, Transform, HaskSyntaxUntyped, ValueIO, PrettyPrint, BNFC.LexBugpan, BNFC.ParBugpan, BNFC.SkelBugpan,BNFC.PrintBugpan,BNFC.LayoutBugpan ,BNFC.ErrM,UnitTesting, BNFC.AbsBugpan,BuiltIn, TypeCheck
   Build-depends:    array, tnutils, probably, haskell98, process, directory, regex-posix, random, base>4.0, bytestring, binary, old-time, storablevector, mtl, data-binary-ieee754, uuid, hint, SHA, mersenne-random, storable-tuple, syb

Executable buganal   
   Main-Is:          BugAnal.hs
   other-modules:    EvalM, Parse, Types,Database,Eval,Expr, Traverse, Transform, HaskSyntaxUntyped, ValueIO, PrettyPrint, BNFC.LexBugpan, BNFC.ParBugpan, BNFC.SkelBugpan,BNFC.PrintBugpan,BNFC.LayoutBugpan ,BNFC.ErrM,UnitTesting, BNFC.AbsBugpan,BuiltIn, TypeCheck
   Build-depends:    array, tnutils, probably, haskell98, process, directory, regex-posix, random, base>4, bytestring, binary, old-time, storablevector, mtl, data-binary-ieee754, uuid, hint, SHA, mersenne-random, storable-tuple, syb

Executable bugdriver   
   Main-Is:            Driver.hs
   ghc-options:      -O2 -threaded 
   if flag(nodaq)
     ghc-options:    -DNODAQ
   else
     ghc-options:    -lcomedi
     c-sources:      Comedi/comedi_hs_helper.c
--   extra-libraries:    comedi
--   extra-include-dirs
--   extra-lib-dirs:     /usr/lib
   if flag(nogl)
       GHC-Options:       -DNOGL
       Build-depends:     array, tnutils, probably, haskell98, process, directory, regex-posix, 
                          utility-ht, random, base>4, bytestring, binary, old-time, storablevector, 
                          mtl, data-binary-ieee754, uuid, stm, storable-tuple, syb
   else
       Build-depends:     array, tnutils, probably, haskell98, process, directory, regex-posix, 
                          utility-ht, random, base>4, bytestring, binary, old-time, storablevector, 
                          mtl, data-binary-ieee754, uuid, GLFW>0.3, stm, OpenGL<2.4, storable-tuple, syb

--   ghc-options:      -O2 -threaded -lcomedi Comedi/comedi_hs_helper.o
--   Includes:           comedilib.h, comedi.h
--  Install-Includes:   comedilib.h, comedi.h




Executable runbugpan   
   Main-Is:          RunBugpan.hs
   ghc-options:      -O2 -threaded 
   if flag(nodaq)
     ghc-options:    -DNODAQ
   else
     ghc-options:    -lcomedi
     c-sources:      Comedi/comedi_hs_helper.c
--   ghc-options:      -O2 -threaded -lcomedi Comedi/comedi_hs_helper.o
   if flag(nogl)
       GHC-Options:       -DNOGL
       Build-depends:     array, tnutils, probably, haskell98, process, directory, regex-posix, 
                          utility-ht, random, base>4, bytestring, binary, old-time, storablevector, 
                          mtl, data-binary-ieee754, uuid, stm, storable-tuple, syb
   else
       Build-depends:     array, tnutils, probably, haskell98, process, directory, regex-posix, 
                          utility-ht, random, base>4, bytestring, binary, old-time, storablevector, 
                          mtl, data-binary-ieee754, uuid, GLFW>0.3, stm, OpenGL<2.4, storable-tuple, syb

--
--   extra-libraries:  libcomedi